[docs] Custom variables

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -57,22 +57,22 @@ extra:
 plugins:
   - mike:
       alias_type: symlink
-      canonical_version: latest  
+      canonical_version: latest
   - search
   - git-committers:
       repository: OpenEx-Platform/docs
-      branch: main  
+      branch: main
   - git-revision-date-localized:
       enable_creation_date: true
       type: timeago
   - glightbox
 
 # Extensions
-markdown_extensions: 
+markdown_extensions:
   - attr_list
   - md_in_html
   - tables
-  - admonition   
+  - admonition
   - def_list
   - pymdownx.inlinehilite
   - pymdownx.snippets
@@ -92,7 +92,7 @@ markdown_extensions:
           class: mermaid
           format: !!python/name:pymdownx.superfences.fence_code_format
   - pymdownx.tabbed:
-      alternate_style: true   
+      alternate_style: true
   - pymdownx.highlight:
       use_pygments: true
       anchor_linenums: true
@@ -101,7 +101,7 @@ markdown_extensions:
       auto_title: false
   - pymdownx.emoji:
       emoji_index: !!python/name:materialx.emoji.twemoji
-      emoji_generator: !!python/name:materialx.emoji.to_svg   
+      emoji_generator: !!python/name:materialx.emoji.to_svg
   - pymdownx.tasklist:
       custom_checkbox: true
   - pymdownx.snippets:
@@ -118,7 +118,7 @@ nav:
       - Authentication: deployment/authentication.md
       - Upgrade: deployment/upgrade.md
     - Ecosystem:
-      - Injectors: deployment/connectors.md
+      - Injectors: deployment/injectors.md
       - Integrations: deployment/integrations.md
       - Other resources: deployment/resources.md
     - Advanced:
@@ -136,7 +136,7 @@ nav:
         - Systems: usage/systems.md
         - Variables and templates: usage/templates.md
       - Testing training: usage/testing.md
-      - Playing and executions: usage/playing.md 
+      - Playing and executions: usage/playing.md
   - Administration:
     - Introduction: administration/introduction.md
     - Enterprise edition: administration/enterprise.md
@@ -150,7 +150,7 @@ nav:
       - Ubuntu: development/environment_ubuntu.md
       - Windows: development/environment_windows.md
     - Platform: development/platform.md
-    - Injectors: development/connectors.md
+    - Injectors: development/injectors.md
     - REST API: development/api-usage.md
 
 
