[docs] Rename variables

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -134,7 +134,7 @@ nav:
         - First exercise: usage/creating.md
         - Audiences: usage/audiences.md
         - Systems: usage/systems.md
-        - Variables and templates: usage/templates.md
+        - Variables: usage/variables.md
       - Testing training: usage/testing.md
       - Playing and executions: usage/playing.md
   - Administration:
