--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -127,23 +127,40 @@ nav:
   - User Guide:
     - Getting started: usage/getting-started.md
     - Foundations:
-      - Exercises and campaigns: usage/exercises.md
-    - Managing exercises:
+      - Scenario and Simulations: usage/scenarios_and_simulations.md
+      - Injects and Expectations: usage/injects_and_expectations.md
+    - Evaluate your Security posture:
       - Overview: usage/overview.md
-      - Creating exercises:
-        - First exercise: usage/creating.md
-        - Audiences: usage/audiences.md
-        - Injects:
-          - Built-In Injects: usage/injects.md
-          - Caldera Injects: usage/inject-caldera.md
-        - Systems: usage/systems.md
-        - Variables: usage/variables.md
-      - Testing training: usage/testing.md
-      - Playing and executions: usage/playing.md
-    - Platform data:
-        - Assets: usage/assets.md
-    - Enrich platform data:
-        - Caldera: usage/collector-caldera.md
+      - Simulation: usage/simulation.md
+      - Atomic testing: usage/atomic.md
+      - Injects: usage/injects.md
+      - Built-In Injects: usage/injects_builtin.md
+      - Caldera Injects: usage/inject-caldera.md
+      - Targets: usage/targets.md
+      - Expectations: usage/expectations.md
+    - Build your own Threat Scenario:
+      - Scenario: usage/scenario.md
+      - Generating Scenario from OpenCTI: usage/opencti_scenario.md
+      - Assets: usage/assets.md
+      - Teams, Players and Organizations: usage/teams_and_players_and_organizations.md
+      - Components:
+        - Documents: usage/documents.md
+        - Custom variables: usage/variables.md
+        - Payloads: usage/payloads.md
+        - Personas: usage/personas.md
+        - Channels: usage/channels.md
+        - Challenges: usage/challenges.md
+    - Share and export:
+      - Exports: usage/exports.md
+      - Reports: usage/reports.md
+    - Improve your security posture:
+      - Mitigations: usage/mitigations.md
+      - Skills: usage/skills.md
+    - Interact with your environement: 
+      - Injectors: usage/injectors.md
+      - Caldera Injector: usage/inject-caldera.md
+      - Collectors: usage/collectors.md
+      - Caldera Collector: usage/collector-caldera.md
   - Administration:
     - Introduction: administration/introduction.md
     - Enterprise edition: administration/enterprise.md
