--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -140,6 +140,7 @@ nav:
     - Build your own Threat Scenario:
       - Scenario: usage/scenario.md
       - Generating Scenario from OpenCTI: usage/opencti_scenario.md
+      - Importing injects into a Scenario: usage/scenario_import.md
       - Assets: usage/assets.md
       - Teams, Players and Organizations: usage/teams_and_players_and_organizations.md
       - Components:
