adding api documentation

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -166,6 +166,7 @@ nav:
       - Collectors:
         - Overview: usage/collectors.md
       - Agents: usage/openbas-agent.md
+    - Rest API: usage/rest-api.md
   - Administration:
     - Introduction: administration/introduction.md
     - Enterprise edition: administration/enterprise.md
