--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -100,8 +100,8 @@ markdown_extensions:
       pygments_lang_class: false
       auto_title: false
   - pymdownx.emoji:
-      emoji_index: !!python/name:materialx.emoji.twemoji
-      emoji_generator: !!python/name:materialx.emoji.to_svg
+      emoji_index: !!python/name:material.extensions.emoji.twemoji
+      emoji_generator: !!python/name:material.extensions.emoji.to_svg
   - pymdownx.tasklist:
       custom_checkbox: true
   - pymdownx.snippets:
