--- a/requirements.txt
+++ b/requirements.txt
@@ -4,5 +4,5 @@ mkdocs-git-authors-plugin
 mkdocs-git-committers-plugin-2
 mkdocs-git-revision-date-localized-plugin
 mkdocs-glightbox
-git+https://github.com/jimporter/mike
+mike
 lxml
