[docs] add emphasis on configuring rabbitmq postgres minio (#89)
* add emphasis on configuring rabbitmq postgres minio

Signed-off-by: Antoine MAZEAS <antoine.mazeas@filigran.io>

* fix list

Signed-off-by: Antoine MAZEAS <antoine.mazeas@filigran.io>

* Add link to supported dependencies list

Signed-off-by: Antoine MAZEAS <antoine.mazeas@filigran.io>

* address remarks

Signed-off-by: Antoine MAZEAS <antoine.mazeas@filigran.io>

* more tweaking

Signed-off-by: Antoine MAZEAS <antoine.mazeas@filigran.io>

---------

Signed-off-by: Antoine MAZEAS <antoine.mazeas@filigran.io>

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -179,6 +179,7 @@ nav:
     - Prerequisites:
       - Ubuntu: development/environment_ubuntu.md
       - Windows: development/environment_windows.md
+    - Build from source: development/build_from_source.md
     - Platform: development/platform.md
     - Injectors: development/injectors.md
     - REST API: development/api-usage.md
