[docs] Add collectors development explanation

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -181,6 +181,7 @@ nav:
       - Windows: development/environment_windows.md
     - Build from source: development/build_from_source.md
     - Platform: development/platform.md
+    - Collectors: development/collectors.md
     - Injectors: development/injectors.md
     - REST API: development/api-usage.md
 
